src/tests/snapshots/amber__tests__translating__sub_int_shorthand.ab__ksh.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "20",
                            with_condition: false,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                VarExpr(
                                    VarExprFragment {
                                        name: "x",
                                        global_id: Some(
                                            0,
                                        ),
                                        kind: Int,
                                        is_ref: false,
                                        is_length: false,
                                        is_quoted: true,
                                        is_array_to_string: false,
                                        is_array_ref: false,
                                        is_declared: true,
                                        is_math_var: false,
                                        render_type: BashValue,
                                        index: None,
                                        index_pos: None,
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "8",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Sub,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "50",
                            with_condition: false,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                VarExpr(
                                    VarExprFragment {
                                        name: "y",
                                        global_id: Some(
                                            1,
                                        ),
                                        kind: Int,
                                        is_ref: false,
                                        is_length: false,
                                        is_quoted: true,
                                        is_array_to_string: false,
                                        is_array_ref: false,
                                        is_declared: true,
                                        is_math_var: false,
                                        render_type: BashValue,
                                        index: None,
                                        index_pos: None,
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "25",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Sub,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
